ObjSpecs/ingress/ingresswithtls/ingresswithtls.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
 tls:
  - hosts:
    - morningclass.tk
    secretName: selfsigned-cert-tls

 rules:
  - http:
      paths:
        - path: /app1
          backend:
            serviceName: app1-service
            servicePort: 5678
        - path: /app2
          backend:
            serviceName: app2-service
            servicePort: 5678
